권한 추가함 이제 캘린더의 목록을 감지

--- a/Dynamic-Notch/Dynamic-Notch/Info.plist
+++ b/Dynamic-Notch/Dynamic-Notch/Info.plist
@@ -8,7 +8,7 @@
 		<true/>
 	</dict>
 	<key>NSCalendarsFullAccessUsageDescription</key>
-	<string>Show calender events inside the notch</string>
+	<string>요청을 권합니다</string>
 	<key>SUEnable</key>
 	<string></string>
 </dict>
