--- a/Dynamic-Notch/Dynamic-Notch/Info.plist
+++ b/Dynamic-Notch/Dynamic-Notch/Info.plist
@@ -11,5 +11,9 @@
 	<string>요청을 권합니다</string>
 	<key>SUEnable</key>
 	<string></string>
+	<key>UTImportedTypeDeclarations</key>
+	<array>
+		<dict/>
+	</array>
 </dict>
 </plist>
