--- a/Dynamic-Notch/Dynamic-Notch.xcodeproj/xcshareddata/xcschemes/Dynamic-Notch 1.xcscheme
+++ b/Dynamic-Notch/Dynamic-Notch.xcodeproj/xcshareddata/xcschemes/Dynamic-Notch 1.xcscheme
@@ -16,8 +16,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "35C4B5972D87FD3300561BBA"
-               BuildableName = "Dynamic-Notch.app"
-               BlueprintName = "Dynamic-Notch"
+               BuildableName = "Live Peninsula.app"
+               BlueprintName = "Live Peninsula"
                ReferencedContainer = "container:Dynamic-Notch.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -45,8 +45,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "35C4B5972D87FD3300561BBA"
-            BuildableName = "Dynamic-Notch.app"
-            BlueprintName = "Dynamic-Notch"
+            BuildableName = "Live Peninsula.app"
+            BlueprintName = "Live Peninsula"
             ReferencedContainer = "container:Dynamic-Notch.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -62,8 +62,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "35C4B5972D87FD3300561BBA"
-            BuildableName = "Dynamic-Notch.app"
-            BlueprintName = "Dynamic-Notch"
+            BuildableName = "Live Peninsula.app"
+            BlueprintName = "Live Peninsula"
             ReferencedContainer = "container:Dynamic-Notch.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
